<resources>
    <string name="app_name">Chores</string>
    <string name="parent_avatar_desc">Parent Avatar</string>
    <string name="parent_title">Welcome, %1$s</string>
    <string name="parent_subtitle">Let\'s see how the kids are doing</string>
    <string name="child_avatar_desc">Star</string>
    <string name="account_icon_desc">Star</string>
    <string name="checking_button_text">Account</string>
    <string name="parent_button">Parent</string>
    <string name="child_button">Child</string>
    <string name="checking">Checking</string>
    <string name="savings">Savings</string>
    <string name="tasks">Tasks</string>
</resources>
