<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e3f2fd">

    <androidx.cardview.widget.CardView
        android:id="@+id/childTitle"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="8dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="#fff9c4"
        app:layout_constraintTop_toBottomOf="@+id/parentWelcome"
        tools:layout_editor_absoluteX="8dp">

        <ImageView
            android:id="@+id/accountsButton1"
            android:layout_width="59dp"
            android:layout_height="65dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/account_icon_desc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_goneMarginStart="16dp"
            app:srcCompat="@android:drawable/btn_star_big_on" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button2"
        style="@style/FirebaseUI.Button.AccountChooser.PhoneButton"
        android:layout_width="276dp"
        android:layout_height="54dp"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/checking_button_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/childTitle"
        app:layout_constraintStart_toStartOf="@+id/childTitle"
        app:layout_constraintTop_toTopOf="@+id/childTitle" />


    <androidx.cardview.widget.CardView
        android:id="@+id/childTile2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="#fff9c4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parentWelcome"
        app:layout_constraintVertical_bias="0.299"
        tools:layout_editor_absoluteX="8dp">

        <Button
            android:id="@+id/button"
            style="@style/FirebaseUI.Button.AccountChooser.PhoneButton"
            android:layout_width="267dp"
            android:layout_height="54dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/checking_button_text"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="106dp"
            tools:layout_editor_absoluteY="212dp" />

        <ImageView
            android:id="@+id/accountsButton2"
            android:layout_width="59dp"
            android:layout_height="65dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_goneMarginStart="16dp"
            app:srcCompat="@android:drawable/btn_star_big_on"
            android:contentDescription="@string/account_icon_desc" />

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/parentWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="@font/brawler"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/childIcon"
        tools:text="Ducky Dana" />

    <ImageButton
        android:id="@+id/childIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/parent_avatar_desc" />

</androidx.constraintlayout.widget.ConstraintLayout>